--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ nav.navbar {
     <a href="#benefits">Benefícios</a>
     <a href="#bet-types">Cotações</a>
     <a href="#testimonials">Depoimentos</a>
-    <a href="https://app.acertosonline.com/" target="_blank">Cadastre-se</a>
+    <a href="https://app.acertos.club/pr/sbrqjugZ" target="_blank">Cadastre-se</a>
     <a href="/contato.html">Contato</a>
   </div>
   <span class="hamburger" onclick="toggleMenu()">
@@ -373,7 +373,7 @@ nav.navbar {
         </div>
     </section>
 <!-- Botão Flutuante de Cadastro -->
-<a href="https://app.acertosonline.com/" 
+<a href="https://app.acertos.club/pr/sbrqjugZ" 
    class="botao-flutuante" 
    target="_blank" 
    title="Cadastre-se agora!">🎯 Cadastre-se Agora</a>
@@ -790,8 +790,8 @@ nav.navbar {
 
             </div>
             <div class="footer-cta-container">
-                <p class="footer-banner-slogan">Cadastre-se agora e tenha a sorte na palma da sua mão!</p>
-                <a href="https://app.acertosonline.com/" class="footer-btn" target="_blank">Cadastre-se Agora</a>
+                <p class="footer-banner-slogan">tre-se agora e tenha a sorte na palma da sua mão!</p>
+                <a href="https://app.acertos.club/pr/sbrqjugZ" class="footer-btn" target="_blank">Cadastre-se Agora</a>
                 <p class="footer-slogan">Transforme sua sorte com o Acertos Club!</p>
             </div>
         </section>
@@ -894,7 +894,7 @@ nav.navbar {
   <div class="carousel-container">
             <div class="testimonial-card">
                 <div class="rating">★★★★★</div>
-                <p>"Mano, a Acertos Club é braba! Fiz o cadastro rapidão e já peguei aquele bônus de 30%. É zoeira, recomendo pra caramba!"</p>
+                <p>"Mano, a Acertos Club é braba! Fiz o tro rapidão e já peguei aquele bônus de 30%. É zoeira, recomendo pra caramba!"</p>
                 <span>- João Silva</span>
             </div>
             <div class="testimonial-card">
@@ -1034,7 +1034,7 @@ nav.navbar {
             </div>
             <div class="testimonial-card">
                 <div class="rating">★★★★☆</div>
-                <p>"Tudo funciona direitinho, do cadastro ao saque. Recomendo de olhos fechados!"</p>
+                <p>"Tudo funciona direitinho, do tro ao saque. Recomendo de olhos fechados!"</p>
                 <span>- Felipe Rocha</span>
             </div>
             <div class="testimonial-card">
