--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ nav.navbar {
 </style>
 
     <nav class="navbar">
-  <span class="nav-brand">Acertos Club</span>
+  <span class="nav-brand">Xerifao JB</span>
   <div class="nav-links" id="navLinks">
     <a href="#intro">Categorias</a>
     <a href="#advantages">Vantagens</a>
