--- a/index.html
+++ b/index.html
@@ -43,125 +43,161 @@
 </script>
 
 <style>
-    *{margin:0;padding:0;box-sizing:border-box;font-family:Arial,sans-serif;}
-    body{background:linear-gradient(135deg,#1a1a2e,#16213e);color:#fff;line-height:1.6;}
-    .container{max-width:1200px;margin:0 auto;padding:20px;}
-    nav{position:sticky;top:0;background:rgba(26,26,46,0.9);padding:15px 20px;z-index:10;border-bottom:1px solid #ffd700;display:flex;justify-content:space-between;align-items:center;}
-    .nav-brand{color:#ffd700;font-size:1.5em;font-weight:bold;}
-    .nav-links{display:flex;align-items:center;}
-    nav a{color:#fff;text-decoration:none;margin:0 15px;font-size:1.1em;transition:color .3s;}
-    nav a:hover,nav a.active{color:#ffd700;}
-    .hamburger{display:none;cursor:pointer;font-size:1.5em;color:#fff;}
-    header{position:relative;text-align:center;padding:20px 0;border-radius:15px;margin-bottom:10px;}
-    header img{max-width:300px;height:auto;display:block;margin:0 auto;}
-    .intro{text-align:center;margin-bottom:40px;}
-    .intro h1{font-size:1.8em;color:#ffd700;margin-bottom:20px;}
-    section[id], div[id]{scroll-margin-top:80px;}
-
-    .categories {display: grid;grid-template-columns: repeat(6, 1fr);gap: 5px;margin: 40px 0;width: 100%;}
-    .category-card {background: rgba(255,255,255,0.1);border-radius: 15px;padding: 0;text-align: center;transition: transform .3s, box-shadow .3s;height: 100%;display: flex;flex-direction: column;max-width: none;}
-    .category-card:hover {transform: translateY(-10px);box-shadow: 0 10px 20px rgba(0,0,0,0.2);}
-    .category-card img {width: 100%;height: 200px;object-fit: cover;border-top-left-radius: 15px;border-top-right-radius: 15px;}
-    .category-card .content {padding: 5px 10px;flex: 1;display: flex;flex-direction: column;justify-content: center;gap: 3px;}
-    .category-card h2 {font-size: 1.1em;margin: 0;color: #ffd700;}
-    .category-card p {font-size: 0.75em;margin: 0;}
-    @media (max-width: 768px) {
-        .categories {grid-template-columns: repeat(2, 1fr);gap: 10px;}
-        .category-card img {height: 120px;width: 100%;object-fit: cover;}
-        .category-card .content {padding: 3px 8px;gap: 2px;}
-        nav {position: fixed;top: 0;left: 0;width: 100%;padding: 15px;}
-        .category-card img {aspect-ratio: 1/1;}
-    }
-</style>
-
-<link rel="stylesheet" href="styles.css" media="print" onload="this.media='all'">
-</head>
-<body>
-<div class="container">
-
-<style>
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-body {
-  font-family: 'Segoe UI', sans-serif;
-  background-color: #f9f9f9;
-}
-
-.container {
-  width: 100%;
-  max-width: 1200px;
-  margin: 0 auto;
-}
-
-nav.navbar {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  background-color: #222;
-  padding: 1rem 2rem;
-  color: white;
-  position: relative;
-}
-
-.nav-brand {
-  font-size: 1.5rem;
-  font-weight: bold;
-}
-
-.nav-links {
-  display: flex;
-  gap: 1.5rem;
-}
-
-.nav-links a {
-  color: white;
-  text-decoration: none;
-  font-weight: 500;
-  transition: color 0.3s;
-}
-
-.nav-links a:hover {
-  color: #00ffae;
-}
-
-.hamburger {
-  display: none;
-  cursor: pointer;
-}
-
-.hamburger img {
-  width: 30px;
-  height: 30px;
-}
-
-/* Responsividade */
-@media (max-width: 768px) {
-  .nav-links {
-    display: none;
-    flex-direction: column;
-    background-color: #222;
-    position: absolute;
-    top: 100%;
-    right: 0;
-    width: 100%;
-    text-align: right;
-    padding: 1rem 2rem;
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
   }
 
-  .nav-links.show {
+  html {
+    scroll-behavior: smooth;
+  }
+
+  body {
+    font-family: 'Segoe UI', sans-serif;
+    background-color: #ffffff;
+    color: #111;
+    line-height: 1.6;
+  }
+
+  .container {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 20px;
+  }
+
+  nav {
+    background-color: #111;
+    color: #fff;
+    padding: 15px 20px;
+    position: sticky;
+    top: 0;
+    z-index: 999;
     display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 3px solid #00ffae;
+  }
+
+  .nav-brand {
+    font-size: 1.6rem;
+    font-weight: bold;
+    color: #00ffae;
+  }
+
+  .nav-links {
+    display: flex;
+    gap: 20px;
+  }
+
+  nav a {
+    text-decoration: none;
+    color: #fff;
+    font-size: 1rem;
+    transition: 0.3s;
+  }
+
+  nav a:hover {
+    color: #00ffae;
   }
 
   .hamburger {
-    display: block;
+    display: none;
+    font-size: 1.8rem;
+    color: white;
+    cursor: pointer;
   }
-}
 
+  header {
+    text-align: center;
+    margin: 40px 0;
+  }
+
+  header img {
+    max-width: 250px;
+    height: auto;
+  }
+
+  .intro {
+    text-align: center;
+    margin-bottom: 40px;
+  }
+
+  .intro h1 {
+    font-size: 2rem;
+    color: #00b88c;
+    margin-bottom: 10px;
+  }
+
+  .intro p {
+    font-size: 1.1rem;
+    color: #444;
+  }
+
+  .categories {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+    gap: 20px;
+    margin: 40px 0;
+  }
+
+  .category-card {
+    background-color: #f3f3f3;
+    border-radius: 10px;
+    overflow: hidden;
+    transition: 0.3s;
+    box-shadow: 0 0 10px rgba(0,0,0,0.08);
+  }
+
+  .category-card:hover {
+    transform: scale(1.03);
+    box-shadow: 0 10px 20px rgba(0,0,0,0.2);
+  }
+
+  .category-card img {
+    width: 100%;
+    height: 160px;
+    object-fit: cover;
+  }
+
+  .category-card .content {
+    padding: 10px;
+  }
+
+  .category-card h2 {
+    font-size: 1rem;
+    color: #111;
+    margin-bottom: 5px;
+  }
+
+  .category-card p {
+    font-size: 0.9rem;
+    color: #666;
+  }
+
+  /* Responsivo */
+  @media (max-width: 768px) {
+    nav .nav-links {
+      display: none;
+      flex-direction: column;
+      background: #111;
+      position: absolute;
+      top: 60px;
+      right: 0;
+      width: 100%;
+      padding: 20px;
+    }
+
+    nav .nav-links.show {
+      display: flex;
+    }
+
+    .hamburger {
+      display: block;
+    }
+  }
 </style>
+
 
     <nav class="navbar">
   <span class="nav-brand">Xerifao JB</span>
